# claude-seo

./: .gitattributes  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
extensions/banana/skills/seo-image-gen/: SKILL.md
extensions/dataforseo/skills/seo-dataforseo/: SKILL.md
extensions/firecrawl/skills/seo-firecrawl/: SKILL.md
seo/: SKILL.md
skills/seo/: SKILL.md
skills/seo-audit/: SKILL.md
skills/seo-backlinks/: SKILL.md
skills/seo-competitor-pages/: SKILL.md
skills/seo-content/: SKILL.md
skills/seo-dataforseo/: SKILL.md
skills/seo-geo/: SKILL.md
skills/seo-google/: SKILL.md
skills/seo-hreflang/: SKILL.md
skills/seo-image-gen/: SKILL.md
skills/seo-images/: SKILL.md
skills/seo-local/: SKILL.md
skills/seo-maps/: SKILL.md
skills/seo-page/: SKILL.md
skills/seo-plan/: SKILL.md
skills/seo-programmatic/: SKILL.md
skills/seo-schema/: SKILL.md
skills/seo-sitemap/: SKILL.md
skills/seo-technical/: SKILL.md
